--- a/package.json
+++ b/package.json
@@ -6,16 +6,24 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-native-web": "^0.19.0",
-    "react-router-dom": "^6.0.0"
+    "react-router-dom": "^6.0.0",
+    "serve": "^14.2.1",
+    "typescript": "^4.9.5"
   },
   "devDependencies": {
     "react-scripts": "^5.0.1"
   },
   "scripts": {
-    "start": "PORT=8000 react-scripts start",
+    "dev": "react-scripts start",
+    "start": "serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "npm install && npm run build"
+  },
+  "engines": {
+    "node": "18.x",
+    "npm": "9.x"
   },
   "browserslist": {
     "production": [
@@ -29,4 +37,6 @@
       "last 1 safari version"
     ]
   }
+}
+
 }
