--- a/package.json
+++ b/package.json
@@ -11,11 +11,9 @@
     "react-dom": "^18.2.0",
     "react-native-web": "^0.19.0",
     "react-router-dom": "^6.0.0",
+    "react-scripts": "^5.0.1",
     "serve": "^14.2.1",
     "typescript": "^4.9.5"
-  },
-  "devDependencies": {
-    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "dev": "react-scripts start",
@@ -23,7 +21,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "heroku-postbuild": "npm install && npm run build"
+    "heroku-postbuild": "npm run build"
   },
   "browserslist": {
     "production": [
